--- a/DualMonitorSolution/DualMonitorProject.csproj
+++ b/DualMonitorSolution/DualMonitorProject.csproj
@@ -81,6 +81,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|AnyCPU'">
     <PlatformTarget>AnyCPU</PlatformTarget>
     <OutputPath>bin\Release\</OutputPath>
+    <Optimize>true</Optimize>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
